fix(sbb-header): shows the header if it has visible focus within (#2237)

--- a/src/components/header/header/header.scss
+++ b/src/components/header/header/header.scss
@@ -43,6 +43,11 @@
   --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
 }
 
+:host([hide-on-scroll][data-fixed][data-has-visible-focus-within]) {
+  --sbb-header-transition-duration: 0;
+  --sbb-header-transform: translate3d(0, 0, 0);
+}
+
 .sbb-header {
   position: var(--sbb-header-position);
   inset: 0 var(--sbb-header-inset-inline-end) auto 0;
@@ -60,7 +65,7 @@
     timing-function: var(--sbb-header-transition-timing);
   }
 
-  :host([data-shadow]) & {
+  :host(:is([data-shadow], [data-has-visible-focus-within])) & {
     @include sbb.shadow-level-9-soft;
   }
 
